# tools

scripts/: models_download.md  models_download.py
vscode_clangd/: CMakeLists.txt  vscode_cpp.md
vscode_clangd/include/: common.hpp
vscode_clangd/src/: common.cpp
vscode_clangd/test/: main.cpp
